Add the code for KSocketFactory. For now, it doesn't support any proxies. I'll add the code for that later.

Let's see if it breaks compilation anywhere.

Also, use this opportunity to fix an old-time NetBSD problem: it
provides reentrant a getservbyname() function. So assume all NetBSDs
running KDE 4 have it reentrant.

BUG:127253

svn path=/trunk/KDE/kdelibs/; revision=648568